# pydiscovergy

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  example.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml  renovate.json
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  labels.yml  linting.yml  publish.yml  release-drafter.yml  release.yml  stale.yml  tests.yml  typing.yml
pydiscovergy/: __init__.py  const.py  discovergy.py  error.py  marshmallow.py  models.py  pydiscovergy.py
pydiscovergy/authentication/: __init__.py  base.py  basicauth.py  token.py  tokenauth.py
tests/: __init__.py  conftest.py  ruff.toml  test_discovergy.py  test_pydiscovergy.py  test_token.py
tests/fixtures/: devices.json  field_names.json  last_reading.json  meters.json  readings.json  statistics.json
