[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pydiscovergy"
version = "2.0.0"
description = "Async Python 3 library for interacting with Discovergy smart meters API"
authors = ["Jan-Philipp Benecke <jan-philipp@bnck.me>"]
repository = "https://github.com/jpbede/pydiscovergy"
license = "MIT"
readme = "README.md"
packages = [
  { include = "pydiscovergy" }
]
keywords = ["discovergy", "smart meter", "smart home"]

[tool.poetry.dependencies]
python = "^3.9"
Authlib = "^1.2.0"
httpx = "^0.23.3"
dataclasses-json = "^0.5.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = ">=0.20.3,<0.22.0"
pytest-cov = "^4.0.0"
respx = "^0.20.1"
pylint = "^2.15.9"
flake8 = "^6.0.0"
black = "^23.1.0"
pre-commit = ">=2.21,<4.0"
isort = "^5.12.0"
pytest-httpx = "^0.21.2"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"
force_sort_within_sections = true

[tool.pylint]
disable = [
  "too-few-public-methods",
  "too-many-instance-attributes",
  "too-many-arguments"
]