[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pydiscovergy"
version = "2.0.3"
description = "Async Python 3 library for interacting with Discovergy smart meters API"
authors = ["Jan-Philipp Benecke <jan-philipp@bnck.me>"]
repository = "https://github.com/jpbede/pydiscovergy"
license = "MIT"
readme = "README.md"
packages = [
  { include = "pydiscovergy" }
]
keywords = ["discovergy", "smart meter", "smart home"]

[tool.poetry.dependencies]
python = ">=3.9, <3.13" # needed by dataclasses-json
authlib = ">=0.15"
httpx = "^0.24.0"
dataclasses-json = "^0.5.14"
marshmallow = "^3.19.0"
pytz = "^2023.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = ">=0.20.3,<0.22.0"
pytest-cov = "^4.0.0"
respx = "^0.20.1"
black = "^23.1.0"
pre-commit = ">=2.21,<4.0"
pytest-httpx = "^0.22.0"
mypy = "^1.4.1"
ruff = "^0.0.280"

[tool.black]
target-version = ["py311"]

[tool.ruff]
target-version = "py311"

select = [
    "C",  # complexity
    "E",  # pycodestyle
    "F",  # pyflakes/autoflake
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle
]

ignore = [
  "E501"
]
