[tool.poetry]
name = "pydiscovergy"
version = "0.0.0"
description = "Async Python 3 library for interacting with Discovergy smart meters API"
authors = ["Jan-Philipp Benecke <jan-philipp@bnck.me>"]
repository = "https://github.com/jpbede/pydiscovergy"
license = "MIT"
readme = "README.md"
packages = [
  { include = "pydiscovergy" }
]
keywords = ["discovergy", "smart meter", "smart home"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.11"
authlib = ">=0.15"
httpx = ">=0.24"
pytz = ">=2023.3"
mashumaro = ">=3.11"
orjson = ">=3.9.0"

[tool.poetry.group.dev.dependencies]
codespell = "2.2.6"
covdefaults = "2.3.0"
coverage = {version = "7.4.1", extras = ["toml"]}
pre-commit = "3.6.0"
pre-commit-hooks = "4.5.0"
pylint = "3.0.3"
pytest = "7.4.4"
pytest-asyncio = "==0.23.3"
pytest-cov = "4.1.0"
respx = "0.20.2"
pytest-httpx = "0.28.0"
mypy = "1.8.0"
ruff = "0.1.14"
safety = "3.0.1"
yamllint = "1.33.0"
types-pytz = "^2023.3.1.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/jpbede/pydiscovergy/issues"
Changelog = "https://github.com/jpbede/pydiscovergy/releases"

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["pydiscovergy"]

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = "3.11"

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pylint.MASTER]
ignore = [
  "tests",
]

[tool.pylint.BASIC]
good-names = [
  "_",
  "ex",
  "fp",
  "i",
  "id",
  "j",
  "k",
  "on",
  "Run",
  "T",
]

[tool.pylint.DESIGN]
max-attributes = 8

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "duplicate-code",
  "format",
  "unsubscriptable-object",
  "too-many-instance-attributes",
  "too-many-arguments",
  "too-many-public-methods",
  "wrong-import-order",

  # disabled temporarily
  "protected-access",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"

[tool.ruff]
ignore = [
  "ANN101", # Self... explanatory
  "ANN102", # cls... just as useless
  "ANN401", # Opinioated warning on disallowing dynamically typed expressions
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "D417", # False positives in some occasions
  "PLR2004", # Just annoying, not really useful
  "PLR0913", # Too many arguments
  "TCH001",

  # conflicts with formatter
  "COM812",
  "ISC001",
]
select = ["ALL"]

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.isort]
known-first-party = ["pydiscovergy"]
force-sort-within-sections = true
split-on-trailing-comma = false
combine-as-imports = true

[tool.ruff.mccabe]
max-complexity = 25

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
